Add font awesome, add section to page

--- a/_harp/index.jade
+++ b/_harp/index.jade
@@ -1,19 +1,28 @@
-nav.navbar.navbar-inverse.navbar-fixed-top(role="navigation")
-  div.container
-    div.navbar-header
-      button.navbar-toggle(type="button", data-toggle="collapse", data-target="#bs-example-navbar-collapse-1")
-        span.sr-only Toggle navigation
-        span.icon-bar
-        span.icon-bar
-        span.icon-bar
-      a.navbar-brand(href="#") PochoLabs
-    div.collapse.navbar-collapse(id="bs-example-navbar-collapse-1")
-      ul.nav.navbar-nav.navbar-right
-        li
-          a(href="#") About
-
-div.container
-  div.row
-    div.col-lg-12.text-center
-      h1 Welcome to PochoLabs
-      p.lead Still working on this...
+#sec1
+  #sec1-bg
+    .container
+      .row
+        .col-lg-12
+          br
+          h2.text-center you.
+          br
+          br
+      .row
+        .col-sm-4.col-xs-12
+          img.img-circle.img-center.img-responsive(src="http://placehold.it/200x200&text=image")
+          p.text-center.lead Non-Profit Organization doing awesome work
+        .col-sm-4.col-xs-12
+          img.img-circle.img-center.img-responsive(src="http://placehold.it/200x200&text=image")
+          p.text-center.lead Local business providing a priceless service
+        .col-sm-4.col-xs-12
+          img.img-circle.img-center.img-responsive(src="http://placehold.it/200x200&text=image")
+          p.text-center.lead Social Justice group trying to change the world
+      .row
+        .col-lg-12
+          br
+          h2.text-center me.
+          br
+          br
+      .row
+        .col-lg-12
+          p.lead.big.text-center #[span.blue Lorem] ipsum dolor #[span.blue sit amet], consectetur adipisicing.
