--- a/_harp/main.less
+++ b/_harp/main.less
@@ -4,3 +4,8 @@ body {
         padding-top: 70px;
         /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
     }
+
+.home-lead{
+  background: #717171;
+  color: #fff;
+}
