Add branding to Nav

--- a/_harp/main.less
+++ b/_harp/main.less
@@ -1,11 +1,22 @@
 @import url('_less/bootstrap.less');
-
 body {
-        padding-top: 70px;
-        /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
-    }
+  padding-top: 70px;
+  /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
+}
 
-.home-lead{
+/* Layout */
+
+/* Navigation */
+.navbar-brand {
+  padding: 5px;
+  & > img {
+    height: 100%;
+    width: 100%;
+  }
+}
+
+/* Home Lead Sections */
+.home-lead {
   background: #717171;
   color: #fff;
 }
