--- a/_harp/_less/variables.less
+++ b/_harp/_less/variables.less
@@ -14,11 +14,11 @@
 @gray-light:             lighten(@gray-base, 46.7%); // #777
 @gray-lighter:           lighten(@gray-base, 93.5%); // #eee
 
-@brand-primary:         darken(#428bca, 6.5%); // #337ab7
-@brand-success:         #5cb85c;
-@brand-info:            #5bc0de;
+@brand-primary:         darken(#38BEE5, 6.5%); // #337ab7
+@brand-success:         #FF6600;
+@brand-info:            #eaf083;
 @brand-warning:         #f0ad4e;
-@brand-danger:          #d9534f;
+@brand-danger:          #910d09;
 
 
 //== Scaffolding
@@ -364,13 +364,13 @@
 @navbar-padding-vertical:          ((@navbar-height - @line-height-computed) / 2);
 @navbar-collapse-max-height:       340px;
 
-@navbar-default-color:             #777;
-@navbar-default-bg:                #f8f8f8;
-@navbar-default-border:            darken(@navbar-default-bg, 6.5%);
+@navbar-default-color:             #ebebeb;
+@navbar-default-bg:                @brand-primary;
+@navbar-default-border:            none;
 
 // Navbar links
-@navbar-default-link-color:                #777;
-@navbar-default-link-hover-color:          #333;
+@navbar-default-link-color:                #ebebeb;
+@navbar-default-link-hover-color:          lighten(@brand-primary, 36.5%);
 @navbar-default-link-hover-bg:             transparent;
 @navbar-default-link-active-color:         #555;
 @navbar-default-link-active-bg:            darken(@navbar-default-bg, 6.5%);
