--- a/_harp/index.jade
+++ b/_harp/index.jade
@@ -1,4 +1,4 @@
-nav.navbar.navbar-inverse.navbar-fixed-top(role="navigation")
+nav.navbar.navbar-default.navbar-fixed-top(role="navigation")
   div.container
     div.navbar-header
       button.navbar-toggle(type="button", data-toggle="collapse", data-target="#bs-example-navbar-collapse-1")
@@ -6,7 +6,8 @@ nav.navbar.navbar-inverse.navbar-fixed-top(role="navigation")
         span.icon-bar
         span.icon-bar
         span.icon-bar
-      a.navbar-brand(href="#") PochoLabs
+      a.navbar-brand(href="#")
+        img(src="/img/logo-pocho-labs-h-white.png", alt="PochoLabs")
     div.collapse.navbar-collapse(id="bs-example-navbar-collapse-1")
       ul.nav.navbar-nav.navbar-right
         li
