--- a/_harp/main.less
+++ b/_harp/main.less
@@ -1,10 +1,14 @@
 @import url('_less/bootstrap.less');
 body {
-  padding-top: 70px;
+  padding-top: 50px;
   /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
 }
 
 /* Layout */
+
+.img-centered{
+  margin: 0px auto;
+}
 
 /* Navigation */
 .navbar-brand {
@@ -15,8 +19,98 @@ body {
   }
 }
 
+/* Jumbotron */
+
+.jumbotron{
+  background: none;
+  color: #fff;
+  padding-left: 0px!important;
+  padding-top: 80px;
+  padding-bottom: 70px;
+}
+
+#homejb{
+  background: url('img/jumbotron.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
 /* Home Lead Sections */
 .home-lead {
-  background: #717171;
+  background: @brand-secondary;
+  color: #fff;
+  & h2{
+    font-style: italic;
+    font-weight: lighter;
+    font-size: 1.6em;
+  }
+}
+
+/* About */
+
+#about{
+  // background: url('img/celso.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  padding-top: 30px;
+  padding-bottom: 15px;
+}
+
+/* Solutions */
+
+
+#solutions{
+  & h1{
+    margin-bottom: 25px;
+  }
+}
+.package{
+  background: @brand-primary;
+  padding: 0;
+  margin: 0;
+  color: #fff;
+  & ul{
+    & li{
+      font-size: 1.3em;
+    }
+  }
+  & > .p-heading{
+    margin: 0;
+    padding: 8px 10px;
+    background: darken(@brand-primary, 10%);
+    & > h3 {
+      margin: 0px;
+      font-size: 2em;
+    }
+  }
+  & > .p-content{
+    padding: 15px 15px 35px;
+  }
+  &.popular{
+    width: 110%;
+    margin-left: -5%;
+    height: 150%!important;
+    margin-top: -5%;
+    background: @brand-secondary;
+    & > .p-heading{
+      background: darken(@brand-secondary, 10%);
+      & h3{
+        font-size: 2.3em;
+      }
+    }
+    & > .p-content{
+      padding-bottom: 70px;
+    }
+  }
+}
+
+
+
+/* Footer */
+
+footer{
+  background: @brand-secondary;
   color: #fff;
 }
