--- a/_harp/_less/variables.less
+++ b/_harp/_less/variables.less
@@ -15,6 +15,7 @@
 @gray-lighter:           lighten(@gray-base, 93.5%); // #eee
 
 @brand-primary:         darken(#38BEE5, 6.5%); // #337ab7
+@brand-secondary:       #FF6600;
 @brand-success:         #FF6600;
 @brand-info:            #eaf083;
 @brand-warning:         #f0ad4e;
@@ -378,14 +379,14 @@
 @navbar-default-link-disabled-bg:          transparent;
 
 // Navbar brand label
-@navbar-default-brand-color:               @navbar-default-link-color;
+@navbar-default-brand-color:               @brand-secondary;
 @navbar-default-brand-hover-color:         darken(@navbar-default-brand-color, 10%);
 @navbar-default-brand-hover-bg:            transparent;
 
 // Navbar toggle
-@navbar-default-toggle-hover-bg:           #ddd;
-@navbar-default-toggle-icon-bar-bg:        #888;
-@navbar-default-toggle-border-color:       #ddd;
+@navbar-default-toggle-hover-bg:           @brand-secondary;
+@navbar-default-toggle-icon-bar-bg:        #fff;
+@navbar-default-toggle-border-color:       #fff;
 
 
 //=== Inverted navbar
