--- a/_harp/_layout.jade
+++ b/_harp/_layout.jade
@@ -9,3 +9,10 @@ html(lang="en")
     
     script(src="js/jquery-2.1.4.js")
     script(src="js/bootstrap.min.js")
+    script.
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-73215542-1', 'auto');
+      ga('send', 'pageview');
