--- a/_harp/_layout.jade
+++ b/_harp/_layout.jade
@@ -1,18 +1,23 @@
 doctype
 html(lang="en")
-  head
-    title PochoLabs
-    link(rel="stylesheet" href="main.css")
-    meta(name="viewport", content="width=device-width, initial-scale=1")
-  body
-    != yield
-    
-    script(src="js/jquery-2.1.4.js")
-    script(src="js/bootstrap.min.js")
-    script.
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-      ga('create', 'UA-73215542-1', 'auto');
-      ga('send', 'pageview');
+	head
+		title PochoLabs
+		link(rel="stylesheet" href="css/animate.min.css")
+		link(rel="stylesheet" href="main.css")
+		meta(name="viewport", content="width=device-width, initial-scale=1")
+	body
+		!= yield
+
+		script(src="js/jquery-2.1.4.js")
+		script(src="js/bootstrap.min.js")
+		script(src="js/wow.min.js")
+		script(src="js/jquery.lettering.js")
+		script(src="js/jquery.textillate.js")
+		script(src="js/main.js")
+		script.
+			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+			ga('create', 'UA-73215542-1', 'auto');
+			ga('send', 'pageview');
