--- a/_harp/index.jade
+++ b/_harp/index.jade
@@ -1,108 +1,109 @@
 nav.navbar.navbar-default.navbar-fixed-top(role="navigation")
-  div.container
-    div.navbar-header
-      button.navbar-toggle(type="button", data-toggle="collapse", data-target="#bs-example-navbar-collapse-1")
-        span.sr-only Toggle navigation
-        span.icon-bar
-        span.icon-bar
-        span.icon-bar
-      a.navbar-brand(href="#")
-        img(src="/img/logo-pocho-labs-h-white.png", alt="PochoLabs")
-    div.collapse.navbar-collapse(id="bs-example-navbar-collapse-1")
-      ul.nav.navbar-nav.navbar-right
-        li
-          a(href="#about") About
-        li
-          a(href="#solutions") Solutions
-        li
-          a(href="#contact") Contact
+	div.container
+		div.navbar-header
+			button.navbar-toggle(type="button", data-toggle="collapse", data-target="#bs-example-navbar-collapse-1")
+				span.sr-only Toggle navigation
+				span.icon-bar
+				span.icon-bar
+				span.icon-bar
+			a.navbar-brand(href="#")
+				img(src="/img/logo-pocho-labs-h-white.png", alt="PochoLabs")
+		div.collapse.navbar-collapse(id="bs-example-navbar-collapse-1")
+			ul.nav.navbar-nav.navbar-right
+				li
+					a(href="#about") About
+				li
+					a(href="#solutions") Solutions
+				li
+					a(href="#contact") Contact
 
 #homejb
-  div.container
-    div.jumbotron
+	div.container
+		div.jumbotron
 
-      h2 Digital Solutions <em>for</em> Latinos <em>by</em> Latinos. 
-      p Specializing in Online Solutions for Latino-owned businesses and Social Justice Organizations.
-      a(href="#solutions", class="btn btn-primary") Learn More...
-    
-  
+			h2.jumbo-heading Digital Solutions <em>for</em> Latinos <em>by</em> Latinos. 
+			p.lead Specializing in Online Solutions for Latino-owned businesses and Social Justice Organizations.
+			a(href="#solutions", class="btn btn-primary") Learn More...
+
+
 .container-fluid.home-lead  
-  .row
-    .col-lg-12
-      h2.lead.text-center The only digital firm that offers 50% of its services pro-bono to social justice organizations.
+	.row
+		.col-lg-12
+			h2.lead.text-center.wow.pulse The only digital firm that offers 50% of its services pro-bono to social justice organizations.
 
 #about      
-  div.container  
-    div.row
-      .col-md-4.col-sm-6
-        img(src="img/celso-circle.jpg", alt="Celso Mireles", class="img-circle img-centered img-responsive")
-      .col-md-8.col-sm-6
-        h1 About Celso
-        p I have been a digital activist since 2009 when I was catalyzed into the undocumented youth movement because of my immigration status. Throughout my 6 years of digital organizing, I have learned digital skills that I noticed were usually missing in the immigrant community. 
-        p Through PochoLabs, my goal is to make these skills available to the immigrant community by offering various solutions for social justice organizations and immigrant-owned businesses. 
-        p This is a social enterprise, and as such, PochoLabs operates differently from other web development firms:
-        ol
-          li <strong>Creating more Latino Tech Entrepreneurs</strong>: For big projects, instead of hiring or subcontracting web developers, I instead create a partnership with other Latino-owned firms or freelancers for that specific project. Instead of offering a job, I like to offer business opportunities to fellow Latino web developers.
-          li <strong>50% of the projects are pro-bono</strong>: This is a bit radical, but necessary for both the immigrant community and for me to grow as a developer.
-      
-        
-.container-fluid.home-lead  
-  .row
-    .col-lg-12
-      h2.lead.text-center Where passion for technology and the immigrant community meet.
+	div.container  
+		div.row
+			.col-md-4.col-sm-6
+				img(src="img/celso-circle.jpg", alt="Celso Mireles", class="img-circle img-centered img-responsive wow pulse")
+			.col-md-8.col-sm-6
+				h1 About Celso
+				p.lead Embracing the unique benefits that being a multicultural technologist provides.
+				p I have been a digital activist since 2009 when I was catalyzed into the undocumented youth movement because of my immigration status. Throughout my 6 years of digital organizing, I have learned digital skills that I noticed were usually missing in the immigrant community. 
+				p Through PochoLabs, my goal is to make these skills available to the immigrant community by offering various solutions for social justice organizations and immigrant-owned businesses. 
+				p This is a social enterprise, and as such, PochoLabs operates differently from other web development firms:
+				ol
+					li <strong>Creating more Latino Tech Entrepreneurs</strong>: For big projects, instead of hiring or subcontracting web developers, I instead create a partnership with other Latino-owned firms or freelancers for that specific project. Instead of offering a job, I like to offer business opportunities to fellow Latino web developers.
+					li <strong>50% of the projects are pro-bono</strong>: This is a bit radical, but necessary for both the immigrant community and for me to grow as a developer.
+
+
+
+.container-fluid.home-lead.wow.pulse
+	.row
+		.col-lg-12
+			h2.lead.text-center Where passion for technology and the immigrant community meet.
 
 #solutions
-  .container      
-    .row
-      .col-lg-12
-        h1 For Every Stage of your Online Presence:
-      .col-sm-4
-        .package
-          .p-heading
-            h3.text-center Starter Package
-          .p-content
-            ul
-              li Single-Page Website
-              li SEO (Search Engine Optimization)
-              li Lead Generation (Get prospective clients!)
-      .col-sm-4
-        .package.popular
-          .p-heading
-            h3.text-center Digital Savvy
-          .p-content
-            p * Everything in previous package
-            ul
-              
-              li Easily Editable Website (through WordPress, Nationbuilder)
-              li Multiple Pages (up to 10)
-      .col-sm-4
-        .package
-          .p-heading
-            h3.text-center Digital Mastermind
-          .p-content
-            p * Everything in previous package
-            ul
-              
-              li Custom Branded Design
-              li Advanded functionality (Think Web Apps, Logins etc...)
-    .row#contact
-      .col-lg-12
-        h3 Get in touch to start your project
-      .col-lg-4.col-md-2.col-sm-2
-      .col-lg-4.col-md-8.col-sm-8
-        form(action='//formspree.io/celso@digitalstrategy.tips', method='POST')
-          .form-group
-            input(type='text', name='name', class="form-control", placeholder="Your Name")
-          .form-group
-            input(type='email', name='_replyto', class="form-control", placeholder="Your Email")
-          .form-group
-            textarea(type='text', name='message', class="form-control", placeholder="Your Message")
-          .form-group
-            input(type='submit', value='Send', class="form-control btn btn-primary")
-      .col-lg-4.col-md-4.col-sm-2
+	.container      
+		.row
+			.col-lg-12
+				h1 For Every Stage of your Online Presence:
+			.col-sm-4
+				.package.wow.fadeIn
+					.p-heading
+						h3.text-center Starter Package
+					.p-content
+						ul
+							li Single-Page Website
+							li SEO (Search Engine Optimization)
+							li Lead Generation (Get prospective clients!)
+			.col-sm-4
+				.package.popular.wow.fadeInDownBig
+					.p-heading
+						h3.text-center Digital Savvy
+					.p-content
+						p * Everything in previous package
+						ul
+
+							li Easily Editable Website (through WordPress, Nationbuilder)
+							li Multiple Pages (up to 10)
+			.col-sm-4
+				.package.wow.fadeIn
+					.p-heading
+						h3.text-center Digital Mastermind
+					.p-content
+						p * Everything in previous package
+						ul
+
+							li Custom Branded Design
+							li Advanded functionality (Think Web Apps, Logins etc...)
+		.row#contact
+			.col-lg-12
+				h3 Get in touch to start your project
+			.col-lg-4.col-md-2.col-sm-2
+			.col-lg-4.col-md-8.col-sm-8
+				form(action='//formspree.io/celso@digitalstrategy.tips', method='POST')
+					.form-group
+						input(type='text', name='name', class="form-control", placeholder="Your Name")
+					.form-group
+						input(type='email', name='_replyto', class="form-control", placeholder="Your Email")
+					.form-group
+						textarea(type='text', name='message', class="form-control", placeholder="Your Message")
+					.form-group
+						input(type='submit', value='Send', class="form-control btn btn-primary")
+			.col-lg-4.col-md-4.col-sm-2
 
 footer
-  .container-fluid
-    .col-lg-12
-      h5.text-center Copyright &copy; 2016. A project of Computer Dude Services LLC.
-  
+	.container-fluid
+		.col-lg-12
+			h5.text-center Copyright &copy; 2016. A project of Computer Dude Services LLC.
