--- a/_harp/main.less
+++ b/_harp/main.less
@@ -42,9 +42,12 @@ body {
   color: #fff;
   & h2{
     font-style: italic;
-    font-weight: lighter;
+  
     font-size: 1.6em;
   }
+	&:hover{
+
+	}
 }
 
 /* About */
