Add portfolio section

--- a/_harp/_layout.jade
+++ b/_harp/_layout.jade
@@ -3,6 +3,8 @@ html(lang="en")
 	head
 		title PochoLabs
 		link(rel="stylesheet" href="css/animate.min.css")
+		link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css')
+
 		link(rel="stylesheet" href="main.css")
 		meta(name="viewport", content="width=device-width, initial-scale=1")
 	body
