--- a/_harp/_partials/p-items/portfolio2.jade
+++ b/_harp/_partials/p-items/portfolio2.jade
@@ -9,16 +9,18 @@
 						h2 LatinoCLD.com
 						hr
 						img.img-responsive.img-centered(src='img/portfolio/latinocld.jpg', alt='')
-						p  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem iure sed modi officiis dolor quam ratione nobis adipisci dicta totam.
+						p  I really enjoyed this project because I designed this website from scratch and created the design concept into a Wordpress theme. This website uses the Bootsrap framework, so it is mobile-responsive.
+						p It was also a pleasure to work with the foundind team of this organization while they planned and executed the launch of this organization and website. It is always very rewarding when I get to work with people doing great work.
 						ul.list-inline.item-details
 							li
 								| Client:
 								strong
-									p Non Organizational
+									p
+										a(href="http://latinocld.com/") Latino Center for Leadership Development
 							li
 								| Date:
 								strong
-									p September 2015
+									p February 2015
 							li
 								| Service:
 								strong
