--- a/_harp/_partials/p-items/portfolio3.jade
+++ b/_harp/_partials/p-items/portfolio3.jade
@@ -9,12 +9,13 @@
 						h2 GoBigBrother.org
 						hr
 						img.img-responsive.img-centered(src='img/portfolio/big-brothers-big-sisters.jpg', alt='')
-						p  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem iure sed modi officiis dolor quam ratione nobis adipisci dicta totam.
+						p This website was part of a team effort I led in the 2015 Phoenix Creatathon for Big Brothers Big Sisters of Arizona. Apart from managing the team, I designed and developed the website.
 						ul.list-inline.item-details
 							li
 								| Client:
 								strong
-									p Non Organizational
+									p
+										a(href="http://www.bbbsaz.org/") Big Brothers Big Sisters Arizona
 							li
 								| Date:
 								strong
