--- a/_harp/_partials/p-items/portfolio4.jade
+++ b/_harp/_partials/p-items/portfolio4.jade
@@ -9,16 +9,18 @@
 						h2 FestivalDFW.com
 						hr
 						img.img-responsive.img-centered(src='img/portfolio/festivaldfw.jpg', alt='')
-						p  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem iure sed modi officiis dolor quam ratione nobis adipisci dicta totam.
+						p This was a website put together by a local magazine owner in the Dallas/Ft. Worth area for "El Dia de Los Niños", Children's Day in English.
+						p This client needed a simple but attractive website for promotion of sponsors and general information of the scheduled activities. I decided that creatind a responive SPA (Single Page App) site would be more suitable for this project.
 						ul.list-inline.item-details
 							li
 								| Client:
 								strong
-									p Non Organizational
+									p 
+										a(href="http://www.informatedfw.com/") Informate Magazine
 							li
 								| Date:
 								strong
-									p September 2015
+									p May 2015
 							li
 								| Service:
 								strong
