--- a/_harp/_partials/p-items/portfolio5.jade
+++ b/_harp/_partials/p-items/portfolio5.jade
@@ -9,16 +9,18 @@
 						h2 Drive For Democracy
 						hr
 						img.img-responsive.img-centered(src='img/portfolio/drive-for-democracy.jpg', alt='')
-						p  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem iure sed modi officiis dolor quam ratione nobis adipisci dicta totam.
+						p This is a microsite I built to recruit volunteers that give rides to the polls on election day.
+						p 
 						ul.list-inline.item-details
 							li
 								| Client:
 								strong
-									p Non Organizational
+									p 
+										a(href="http://organizetexas.org", target="_blank") Texas Organizing Project
 							li
 								| Date:
 								strong
-									p September 2015
+									p September 2014
 							li
 								| Service:
 								strong
