--- a/_harp/_partials/p-items/portfolio6.jade
+++ b/_harp/_partials/p-items/portfolio6.jade
@@ -9,16 +9,17 @@
 						h2 KeepHB1403
 						hr
 						img.img-responsive.img-centered(src='img/portfolio/keephb1403.jpg', alt='')
-						p  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem iure sed modi officiis dolor quam ratione nobis adipisci dicta totam.
+						p  Custom Website to keep in-state tuition for DREAMers in Texas. I developed this website as part of an effort to keep in-state tuition for undocumented students.
 						ul.list-inline.item-details
 							li
 								| Client:
 								strong
-									p Non Organizational
+									p
+										a(href="http://latinocld.com", target="blank") Latino Center for Leadership Development
 							li
 								| Date:
 								strong
-									p September 2015
+									p November 2014
 							li
 								| Service:
 								strong
