--- a/_harp/_partials/portfolio.jade
+++ b/_harp/_partials/portfolio.jade
@@ -1,6 +1,6 @@
 #portfolio
 	.row
-		.col-md-4
+		.col-md-3.col-sm-6
 			.box-bg
 				img.img-responsive(src="img/portfolio/undocumoney.jpg", alt="")
 			.box-content
@@ -9,7 +9,7 @@
 					p.text-center
 						i.fa.fa-search.fa-6
 
-		.col-md-4
+		.col-md-3.col-sm-6
 			.box-bg
 				img.img-responsive(src="img/portfolio/latinocld.jpg", alt="")
 			.box-content
@@ -19,7 +19,7 @@
 						i.fa.fa-search.fa-6
 
 
-		.col-md-4
+		.col-md-3.col-sm-6
 			.box-bg
 				img.img-responsive(src="img/portfolio/big-brothers-big-sisters.jpg", alt="")
 			.box-content
@@ -28,7 +28,7 @@
 					p.text-center
 						i.fa.fa-search.fa-6
 
-		.col-md-4
+		.col-md-3.col-sm-6
 			.box-bg
 				img.img-responsive(src="img/portfolio/festivaldfw.jpg", alt="")
 			.box-content
@@ -38,7 +38,7 @@
 						i.fa.fa-search.fa-6
 
 
-		.col-md-4
+		.col-md-3.col-sm-6
 			.box-bg
 				img.img-responsive(src="img/portfolio/drive-for-democracy.jpg", alt="")
 			.box-content
@@ -47,12 +47,30 @@
 					p.text-center
 						i.fa.fa-search.fa-6
 
-		.col-md-4
+		.col-md-3.col-sm-6
 			.box-bg
 				img.img-responsive(src="img/portfolio/keephb1403.jpg", alt="")
 			.box-content
 				a(href="#portfolio6", data-toggle="modal", class="text-center")
 					h3 KeepHB1403
+					p.text-center
+						i.fa.fa-search.fa-6
+
+		.col-md-3.col-sm-6
+			.box-bg
+				img.img-responsive(src="img/portfolio/uhyea.jpg", alt="")
+			.box-content
+				a(href="#portfolio7", data-toggle="modal", class="text-center")
+					h3 UHYEA.org
+					p.text-center
+						i.fa.fa-search.fa-6
+
+		.col-md-3.col-sm-6
+			.box-bg
+				img.img-responsive(src="img/portfolio/fonseca.jpg", alt="")
+			.box-content
+				a(href="#portfolio8", data-toggle="modal", class="text-center")
+					h3 FonsecaForTempe.com
 					p.text-center
 						i.fa.fa-search.fa-6
 
@@ -62,3 +80,5 @@
 != partial('p-items/portfolio4.jade')
 != partial('p-items/portfolio5.jade')
 != partial('p-items/portfolio6.jade')
+!= partial('p-items/portfolio7.jade')
+!= partial('p-items/portfolio8.jade')
