--- a/_harp/index.jade
+++ b/_harp/index.jade
@@ -6,30 +6,32 @@ nav.navbar.navbar-default.navbar-fixed-top(role="navigation")
 				span.icon-bar
 				span.icon-bar
 				span.icon-bar
-			a.navbar-brand(href="#")
+			a.navbar-brand.nav-link(href="#")
 				img(src="/img/logo-pocho-labs-h-white.png", alt="PochoLabs")
 		div.collapse.navbar-collapse(id="bs-example-navbar-collapse-1")
 			ul.nav.navbar-nav.navbar-right
 				li
-					a(href="#about") About
+					a.nav-link(href="#about") About
 				li
-					a(href="#solutions") Solutions
+					a.nav-link(href="#portfolio") Portfolio
 				li
-					a(href="#contact") Contact
+					a.nav-link(href="#solutions") Solutions
+				li
+					a.nav-link(href="#contact") Contact
 
 #homejb
 	div.container
 		div.jumbotron
 
 			h2.jumbo-heading Digital Solutions <em>for</em> Latinos <em>by</em> Latinos. 
-			p.lead Specializing in Online Solutions for Latino-owned businesses and Social Justice Organizations.
+			p.lead Specializing in Online Solutions for Latino-owned businesses and Social Justice Organizations. Whether you need a website, an email campaign, or digital branding, I want to help you.
 			a(href="#solutions", class="btn btn-primary") Learn More...
 
 
 .container-fluid.home-lead  
 	.row
 		.col-lg-12
-			p.lead.text-center.wow.pulse The only digital firm that offers 50% of its services pro-bono to social justice organizations.
+			p.lead.text-center.wow.pulse Embracing the unique benefits that being a multicultural creative professional provides.
 
 #about      
 	div.container  
@@ -38,7 +40,6 @@ nav.navbar.navbar-default.navbar-fixed-top(role="navigation")
 				img(src="img/celso-circle.jpg", alt="Celso Mireles", class="img-circle img-centered img-responsive")
 			.col-md-8.col-sm-6
 				h1 About Celso
-				p.lead Embracing the unique benefits that being a multicultural technologist provides.
 				p I have been a digital activist since 2009 when I was catalyzed into the undocumented youth movement because of my immigration status. Throughout my 6 years of digital organizing, I have learned digital skills that I noticed were usually missing in the immigrant community. 
 				p Through PochoLabs, my goal is to make these skills available to the immigrant community by offering various solutions for social justice organizations and immigrant-owned businesses. 
 				p This is a social enterprise, and as such, PochoLabs operates differently from other web development firms:
@@ -57,7 +58,7 @@ nav.navbar.navbar-default.navbar-fixed-top(role="navigation")
 .container-fluid.home-lead.wow.pulse
 	.row
 		.col-lg-12
-			p.lead.text-center Where passion for technology and the immigrant community meet.
+			p.lead.text-center Latin@-owned business? Organization trying to make the better world? I want to help you!
 
 #solutions
 	.container      
