--- a/_harp/main.less
+++ b/_harp/main.less
@@ -31,6 +31,11 @@ h3{
   }
 }
 
+.nav-link{
+	font-size: 1.4em;
+	font-weight: bold;
+}
+
 /* Jumbotron */
 
 .jumbotron{
@@ -65,10 +70,10 @@ h3{
 /* About */
 
 #about{
-  // background: url('img/celso.jpg');
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
+  background-image: url('img/subtlenet2.png');
+  // background-repeat: no-repeat;
+  // background-size: cover;
+  // background-position: center;
   padding-top: 30px;
   padding-bottom: 15px;
 }
@@ -77,6 +82,7 @@ h3{
 
 
 #solutions{
+	background-image: url('img/subtlenet2.png');
   & h1{
     margin-bottom: 25px;
   }
@@ -125,7 +131,7 @@ h3{
 
 #portfolio{
 	margin: 0px;
-	& .col-md-4{
+	& .col-md-3{
 		position: relative;
 		padding: 0px;
 		& .box-bg{
