Add animation to jumbotron link

--- a/_harp/index.jade
+++ b/_harp/index.jade
@@ -25,7 +25,7 @@ nav.navbar.navbar-default.navbar-fixed-top(role="navigation")
 
 			h2.jumbo-heading Digital Solutions <em>for</em> Latinos <em>by</em> Latinos. 
 			p.lead Specializing in Online Solutions for Latino-owned businesses and Social Justice Organizations. Whether you need a website, an email campaign, or digital branding, I want to help you.
-			a(href="#solutions", class="btn btn-primary") Learn More...
+			a.nav-link(href="#about", class="btn btn-primary") Learn More...
 
 
 .container-fluid.home-lead  
