--- a/_harp/_layout.jade
+++ b/_harp/_layout.jade
@@ -11,7 +11,7 @@ html(lang="en")
 
 		meta(property='og:image', content='http://pocholabs.com/img/pocho-labs-web-design.jpg')
 		meta(property='og:site_name', content='PochoLabs Web Design')
-		meta(property='og:description', content="Where passion for technology and the immigrant community meet.")
+		meta(property='og:description', content="Accessible, quality design for small businesses and organizations serving Latinos.")
 		meta(property='og:url', content='http://pocholabs.com/')
 
 	body
