--- a/_harp/public/index.jade
+++ b/_harp/public/index.jade
@@ -99,7 +99,7 @@ nav.navbar.navbar-default.navbar-fixed-top(role="navigation")
 				h3 Get in touch to start your project
 			.col-lg-4.col-md-2.col-sm-2
 			.col-lg-4.col-md-8.col-sm-8
-				form(action='//formspree.io/celso@digitalstrategy.tips', method='POST')
+				form(action='//formspree.io/celso@pocholabs.com', method='POST')
 					.form-group
 						input(type='text', name='name', class="form-control", placeholder="Your Name")
 					.form-group
