--- a/_harp/public/_layout.jade
+++ b/_harp/public/_layout.jade
@@ -2,6 +2,7 @@ doctype
 html(lang="en")
 	head
 		title PochoLabs | Web Design
+		link(rel='manifest', href='manifest.json')
 		link(rel="stylesheet" href="css/animate.min.css")
 		link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css')
 
