Make heading change color on scroll

--- a/_harp/public/main.less
+++ b/_harp/public/main.less
@@ -1,6 +1,6 @@
 @import url('_less/bootstrap.less');
 body {
-  padding-top: 50px;
+  //padding-top: 50px;
   /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
 }
 
@@ -35,6 +35,24 @@ h3{
 	font-size: 1.4em;
 	font-weight: bold;
 }
+
+
+// Navbar
+
+.navbar-default{
+  background-color: rgba(250,250,250,0);
+  // background: none;
+  & .container{
+    background-color: rgba(250,250,250,0);
+  }
+
+}
+
+.navbar-shrink{
+  background-color: #38BEE5;
+
+}
+
 
 /* Jumbotron */
 
