--- a/_harp/public/_layout.jade
+++ b/_harp/public/_layout.jade
@@ -1,7 +1,7 @@
 doctype
 html(lang="en")
 	head
-		title PochoLabs | Web Design
+		title PochoLabs | Web App Development
 		link(rel='manifest', href='manifest.json')
 		link(rel="stylesheet" href="css/animate.min.css")
 		link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css')
@@ -16,6 +16,7 @@ html(lang="en")
 		meta(property='og:url', content='http://pocholabs.com/')
 
 	body
+	
 		!= yield
 
 		script(src="js/jquery-2.1.4.js")
@@ -23,6 +24,8 @@ html(lang="en")
 		script(src="js/wow.min.js")
 		script(src="js/jquery.lettering.js")
 		script(src="js/jquery.textillate.js")
+		script(src="js/classie.js")
+		script(src="js/cpbAnimatedHeader.js")
 		script(src="js/main.js")
 		script.
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
