--- a/_harp/public/main.less
+++ b/_harp/public/main.less
@@ -23,13 +23,6 @@ h3{
 }
 
 /* Navigation */
-.navbar-brand {
-  padding: 5px;
-  & > img {
-    height: 100%;
-    width: 210px;
-  }
-}
 
 .nav-link{
 	font-size: 1.4em;
@@ -44,12 +37,35 @@ h3{
   // background: none;
   & .container{
     background-color: rgba(250,250,250,0);
+    margin-top: 20px;
+    margin-bottom: 20px;
   }
+  & .navbar-brand {
+    padding: 5px;
+    & > img {
+      height: 115%;
+      width: 250px;
+    }
+  }
+
 
 }
 
 .navbar-shrink{
   background-color: #38BEE5;
+  font-size: 0.8em;
+  & .container{
+    margin-top: 5px;
+    margin-bottom: 5px;
+  }
+  & .navbar-brand {
+    padding: 5px;
+    & > img {
+      height: 100%;
+      width: 210px;
+    }
+  }
+
 
 }
 
@@ -60,8 +76,8 @@ h3{
   background: none;
   color: #fff;
   padding-left: 0px!important;
-  padding-top: 80px;
-  padding-bottom: 70px;
+  padding-top: 220px;
+  padding-bottom: 0px;
 }
 
 #homejb{
