--- a/_harp/public/main.less
+++ b/_harp/public/main.less
@@ -89,7 +89,7 @@ h3{
 
 /* Home Lead Sections */
 .home-lead {
-  background: @brand-secondary;
+  background: darken(@brand-primary, 20%);
   color: #fff;
   & p{
     font-style: italic;
@@ -117,6 +117,7 @@ h3{
 
 #solutions{
 	background-image: url('img/subtlenet2.png');
+  padding-bottom: 20px;
   & h1{
     margin-bottom: 25px;
   }
@@ -179,7 +180,7 @@ h3{
 		& .box-content{
 			position: absolute;
 			top: 0px;
-			background: rgba(0,0,0,0.7);
+			background: rgba(17,68,83,0.85);
 			padding: 10%;
 			height: 100%;
 			width: 100%;
