--- a/_harp/public/main.less
+++ b/_harp/public/main.less
@@ -21,6 +21,10 @@ h3{
 .img-centered{
   margin: 0px auto;
 }
+.extra-padding{
+  padding-top: 70px;
+  padding-bottom: 70px;
+}
 
 /* Navigation */
 
@@ -53,6 +57,7 @@ h3{
 
 .navbar-shrink{
   background-color: #38BEE5;
+  background-color: darken(#38BEE5, 20%);
   font-size: 0.8em;
   & .container{
     margin-top: 5px;
@@ -76,7 +81,7 @@ h3{
   background: none;
   color: #fff;
   padding-left: 0px!important;
-  padding-top: 220px;
+  padding-top: 180px;
   padding-bottom: 0px;
 }
 
