Update portfolio items.

--- a/_harp/public/_partials/p-items/portfolio2.jade
+++ b/_harp/public/_partials/p-items/portfolio2.jade
@@ -6,25 +6,20 @@
 			.row
 				.col-lg-8.col-lg-offset-2
 					.modal-body
-						h2 LatinoCLD.com
+						h2 RedadasDeObama.com
 						hr
-						img.img-responsive.img-centered(src='img/portfolio/latinocld.jpg', alt='')
-						p  I really enjoyed this project because I designed this website from scratch and created the design concept into a Wordpress theme. This website uses the Bootsrap framework, so it is mobile-responsive.
-						p It was also a pleasure to work with the foundind team of this organization while they planned and executed the launch of this organization and website. It is always very rewarding when I get to work with people doing great work.
-						ul.list-inline.item-details
-							li
-								| Client:
-								strong
-									p
-										a(href="http://latinocld.com/") Latino Center for Leadership Development
+						img.img-responsive.img-centered(src='img/portfolio/redadasdeobama.png', alt='')
+						p This was a great project to work on, and it is my first public app using Meteor.js with React.js as the front end layer.
+						p The project is still in BETA and under active development.
+						
 							li
 								| Date:
 								strong
-									p February 2015
+									p June 2016
 							li
 								| Service:
 								strong
-									p Web Development
+									p Web App Development
 						.text-center
 							button.btn.btn-default(type='button', data-dismiss='modal')
 								i.fa.fa-times  Close
