--- a/_harp/public/_partials/p-items/portfolio4.jade
+++ b/_harp/public/_partials/p-items/portfolio4.jade
@@ -6,21 +6,24 @@
 			.row
 				.col-lg-8.col-lg-offset-2
 					.modal-body
-						h2 FestivalDFW.com
+						h2 MovimientoCosecha.com 
 						hr
-						img.img-responsive.img-centered(src='img/portfolio/festivaldfw.jpg', alt='')
-						p This was a website put together by a local magazine owner in the Dallas/Ft. Worth area for "El Dia de Los Niños", Children's Day in English.
-						p This client needed a simple but attractive website for promotion of sponsors and general information of the scheduled activities. I decided that creatind a responive SPA (Single Page App) site would be more suitable for this project.
-						ul.list-inline.item-details
-							li
-								| Client:
-								strong
-									p 
-										a(href="http://www.informatedfw.com/") Informate Magazine
+						img.img-responsive.img-centered(src='img/portfolio/movimientocosecha.png', alt='')
+						p This is a small javascript library I wrote for a static website on 
+							a(href="http://MovimientoCosecha.com") MovimientoCosecha.com.
+
+						p
+							| This is an open source library, and you can check out the code at 
+							a(href="http://github.com/cosecha/Translatify.js") http://github.com/cosecha/Translatify.js
+							| . 
+							| While you're at it, you can see the repository for the Cosecha website at 
+							a(href="http://github.com/Cosecha/cosecha.github.io") http://github.com/Cosecha/cosecha.github.io
+							| .
+					
 							li
 								| Date:
 								strong
-									p May 2015
+									p May 2016
 							li
 								| Service:
 								strong
