--- a/_harp/public/_partials/p-items/portfolio8.jade
+++ b/_harp/public/_partials/p-items/portfolio8.jade
@@ -10,6 +10,7 @@
 						hr
 						img.img-responsive.img-centered(src='img/portfolio/fonseca.jpg', alt='')
 						p I designed this website for a groupd of undocumented youth in Houston, Texas.
+						p NOTE: This site is no longer online.
 						ul.list-inline.item-details
 							li
 								| Client:
