--- a/_harp/public/_partials/portfolio.jade
+++ b/_harp/public/_partials/portfolio.jade
@@ -11,10 +11,10 @@
 
 		.col-md-3.col-sm-6
 			.box-bg
-				img.img-responsive(src="img/portfolio/latinocld.jpg", alt="")
+				img.img-responsive(src="img/portfolio/redadasdeobama.png", alt="")
 			.box-content
 				a(href="#portfolio2", data-toggle="modal", class="text-center")
-					h3 LatinoCLD.com
+					h3 RedadasDeObama.com
 					p.text-center
 						i.fa.fa-search.fa-6
 
@@ -30,10 +30,10 @@
 
 		.col-md-3.col-sm-6
 			.box-bg
-				img.img-responsive(src="img/portfolio/festivaldfw.jpg", alt="")
+				img.img-responsive(src="img/portfolio/movimientocosecha.png", alt="")
 			.box-content
 				a(href="#portfolio4", data-toggle="modal", class="text-center")
-					h3 FestivalDFW.com
+					h3 MovimientoCosecha.com
 					p.text-center
 						i.fa.fa-search.fa-6
 
@@ -58,10 +58,10 @@
 
 		.col-md-3.col-sm-6
 			.box-bg
-				img.img-responsive(src="img/portfolio/uhyea.jpg", alt="")
+				img.img-responsive(src="img/portfolio/plazacosecha.png", alt="")
 			.box-content
 				a(href="#portfolio7", data-toggle="modal", class="text-center")
-					h3 UHYEA.org
+					h3 PlazaCosecha.com
 					p.text-center
 						i.fa.fa-search.fa-6
 
