--- a/_harp/public/_partials/p-items/portfolio1.jade
+++ b/_harp/public/_partials/p-items/portfolio1.jade
@@ -10,6 +10,7 @@
 						hr
 						img.img-responsive.img-centered(src='img/portfolio/undocumoney.jpg', alt='')
 						p  I am particularly proud of this project. It was a pro-bono effort to help a group of fellow immigrant youth with their #undocumoney campaign.
+						p NOTE: This site is no longer online.
 						ul.list-inline.item-details
 							li
 								| Client:
