--- a/_harp/public/_partials/p-items/portfolio7.jade
+++ b/_harp/public/_partials/p-items/portfolio7.jade
@@ -6,20 +6,18 @@
 			.row
 				.col-lg-8.col-lg-offset-2
 					.modal-body
-						h2 UHYEA.org
+						h2 PlazaCosecha.com
 						hr
-						img.img-responsive.img-centered(src='img/portfolio/uhyea.jpg', alt='')
-						p I designed this website for a groupd of undocumented youth in Houston, Texas.
+						img.img-responsive.img-centered(src='img/portfolio/plazacosecha.png', alt='')
+						p I didn't develop this site myself. In fact, this site uses
+							a(href="http://rocket.chat" target="_blank") Rocket.Chat
+							| , which is an open source version on Slack. This is an example of me focusing on the client needs, and sometimes, the answers isn't a custom made project, if there is an existing open source tool we can use.
 						ul.list-inline.item-details
-							li
-								| Client:
-								strong
-									p
-										a(href="http://uhyea.org/") UHYEA.org
+					
 							li
 								| Date:
 								strong
-									p March 2015
+									p July 2016
 							li
 								| Service:
 								strong
