Fix content and nav transparency on mobile

--- a/_harp/public/_partials/p-items/portfolio8.jade
+++ b/_harp/public/_partials/p-items/portfolio8.jade
@@ -9,7 +9,7 @@
 						h2 Fonseca For Tempe
 						hr
 						img.img-responsive.img-centered(src='img/portfolio/fonseca.jpg', alt='')
-						p I designed this website for a groupd of undocumented youth in Houston, Texas.
+						p This is a website I built for friend and candidate for Tempe City Council.
 						p NOTE: This site is no longer online.
 						ul.list-inline.item-details
 							li
