--- a/_harp/public/index.jade
+++ b/_harp/public/index.jade
@@ -24,12 +24,12 @@ nav.navbar.navbar-default.navbar-fixed-top(role="navigation")
 		div.jumbotron.row
 			.col-sm-6
 				h1.jumbo-heading Creating interactive online spaces
-				p.lead Here at PochoLabs, we love merging desing and function to create beautiful online spaces for our clients. From custom made web applications, to online portals.
+				p.lead Here at PochoLabs, we love merging design and function to create beautiful online spaces for our clients. From custom made web applications, to online portals.
 				a.nav-link(href="#about", class="btn btn-success") Learn More...
 			.col-sm-6
 				//img(src="http://placehold.it/200x200", alt="")
 
-			
+
 
 
 .container-fluid.home-lead  
@@ -72,7 +72,7 @@ nav.navbar.navbar-default.navbar-fixed-top(role="navigation")
 							li HTML 5 and CSS3
 							li Mobile-first design
 							li Focus on user experience
-							
+
 			.col-sm-4
 				.package.popular.wow.zoomInUp
 					.p-heading
@@ -97,7 +97,7 @@ nav.navbar.navbar-default.navbar-fixed-top(role="navigation")
 //- 	.row
 //- 		.col-lg-12
 //- 			p.lead.text-center Latin@-owned business? Organization trying to make the better world? We want to help you!
-			
+
 != partial('_partials/portfolio.jade')
 
 .container#contact
