--- a/_harp/public/index.jade
+++ b/_harp/public/index.jade
@@ -25,7 +25,7 @@ nav.navbar.navbar-default.navbar-fixed-top(role="navigation")
 			.col-sm-6
 				h1.jumbo-heading Creating interactive online spaces
 				p.lead Here at PochoLabs, we love merging design and function to create beautiful online spaces for our clients. From custom made web applications, to online portals.
-				a.nav-link(href="#about", class="btn btn-success") Learn More...
+				a.nav-link(href="#solutions", class="btn btn-success") Learn More...
 			.col-sm-6
 				//img(src="http://placehold.it/200x200", alt="")
 
