Edit Services section

--- a/_harp/public/index.jade
+++ b/_harp/public/index.jade
@@ -81,8 +81,8 @@ nav.navbar.navbar-default.navbar-fixed-top(role="navigation")
 						p * We choose the best framework for your needs
 						ul
 							li Meteor.js
-							li React.js
-							li Ruby on Rails
+							li WordPress
+							li Static Site Development
 			.col-sm-4
 				.package.wow.fadeIn
 					.p-heading
