--- a/_harp/public/main.less
+++ b/_harp/public/main.less
@@ -1,5 +1,11 @@
 @import url('_less/bootstrap.less');
+@import url('fonts/pocholabs.css');
+html{
+	height: 100%;
+}
 body {
+	height: 100%;
+	width: 100%;
   //padding-top: 50px;
   /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
 }
@@ -39,6 +45,12 @@ h3{
 .navbar-default{
   background-color: rgba(250,250,250,0);
   // background: none;
+	-webkit-transition: all .30s;
+  -moz-transition: all .30s;
+  transition: all .30s;
+  -o-transition: all .30s;
+	border-bottom: 1px solid;
+	border-color: rgba(250,250,250,0.15);
   & .container{
     background-color: rgba(250,250,250,0);
     margin-top: 20px;
@@ -46,59 +58,208 @@ h3{
   }
   & .navbar-brand {
     padding: 5px;
-    & > img {
-      height: 115%;
-      width: 250px;
+    & > svg {
+      height: 40px;
+      width: 220px;
+			background-size: contain;
+			background-repeat: no-repeat;
+			display: inline;
+			float:left;
+			position: relative;
+			overflow: visible;
+
+			& path, polygon {
+				fill: #ffffff;
+			}
     }
   }
 
-
-}
-@media screen and (max-width: 600px){
-	#bs-example-navbar-collapse-1{
-		background: #1582a2;
+	.navbar-toggle{
+		&:hover, &:focus{
+		background-color: #fff;
+		& > .icon-bar{
+			background-color: @brand-primary!important;
+			}
+		}
 	}
 
-	.navbar-shrink{
-		background-color: #1582a2;
-	}
+
 }
+
 
 .navbar-shrink{
-  background-color: #38BEE5;
-  background-color: darken(#38BEE5, 20%);
+  color: darken(#38BEE5, 15%);
+  background-color: rgba( 250, 250, 250, 0.99);
   font-size: 0.8em;
+	-webkit-transition: all .30s;
+  -moz-transition: all .30s;
+  transition: all .30s;
+  -o-transition: all .30s;
   & .container{
     margin-top: 5px;
     margin-bottom: 5px;
   }
   & .navbar-brand {
     padding: 5px;
-    & > img {
-      height: 100%;
-      width: 210px;
+		color: darken(#38BEE5, 15%);
+    & > svg {
+      transform: scale(0.9);
+			path, polygon{
+				fill: darken(#38BEE5, 15%);
+			}
+
     }
   }
 
+	.navbar-nav{
+		& li > a {
+			color: darken(#38BEE5, 15%);
+		}
+	}
 
+
+}
+
+@media screen and (max-width: 845px){
+
+	.navbar-collapse, .navbar-default{
+		background-color: #1582a2;
+		-webkit-transition: all .30s;
+	  -moz-transition: all .30s;
+	  transition: all .30s;
+	  -o-transition: all .30s;
+	}
+
+	.navbar-shrink{
+		-webkit-transition: all .30s;
+	  -moz-transition: all .30s;
+	  transition: all .30s;
+	  -o-transition: all .30s;
+		background-color: #1582a2;
+		& .navbar-brand {
+	    & > svg {
+
+
+				& path, polygon {
+					fill: #ffffff;
+				}
+	    }
+	  }
+		.navbar-nav{
+			background-color: #1582a2;
+			& li > a {
+				color: #fff;
+			}
+		}
+	}
 }
 
 
 /* Jumbotron */
 
-.jumbotron{
-  background: none;
-  color: #fff;
-  padding-left: 0px!important;
-  padding-top: 80px;
-  padding-bottom: 0px;
+#homejb{
+	position: relative;
+	min-height: auto;
+	background: url('img/jumbotron.jpg');
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center;
+	background-attachment: fixed;
+
+
+	& > .overlay {
+		position: absolute;
+		background: linear-gradient(-30deg, rgba(0, 0,0, .3) 0%,  rgba(56, 190, 230, .5) 100%);
+		width: 100%;
+		height: 100%;
+	}
+
+	.jumbotron{
+	  background: none;
+	  color: #fff;
+	  padding-left: 0px!important;
+	  padding-top: 80px;
+	  padding-bottom: 0px;
+	}
 }
 
-#homejb{
-  background: url('img/jumbotron.jpg');
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
+@media (min-width: 768px) {
+	#homejb {
+		min-height: 100%;
+	}
+}
+
+#logo-svg{
+	text-align: center;
+	& span{
+		width:100%;
+		height:100%;
+		font-size: 30em;
+		-webkit-animation: neon .5s ease-in-out infinite alternate;
+		-moz-animation: neon .5s ease-in-out infinite alternate;
+		animation: neon .5s ease-in-out infinite alternate;
+
+
+		&:hover, &:focus{
+			-webkit-animation: neon .5s ease-in-out infinite alternate;
+			-moz-animation: neon .5s ease-in-out infinite alternate;
+			animation: neon2 .5s ease-in-out infinite alternate;
+
+		}
+
+	}
+}
+
+@bright: lighten(@brand-primary, 10%);
+
+@keyframes neon {
+  from {
+    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px @bright, 0 0 70px @bright, 0 0 80px @bright, 0 0 100px @bright, 0 0 150px @bright;
+  }
+  to {
+    text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px @bright, 0 0 35px @bright, 0 0 40px @bright, 0 0 50px @bright, 0 0 75px @bright;
+  }
+}
+@-webkit-keyframes neon {
+  from {
+    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px @bright, 0 0 70px @bright, 0 0 80px @bright, 0 0 100px @bright, 0 0 150px @bright;
+  }
+  to {
+    text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px @bright, 0 0 35px @bright, 0 0 40px @bright, 0 0 50px @bright, 0 0 75px @bright;
+  }
+}
+@-moz-keyframes neon {
+  from {
+    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px @bright, 0 0 70px @bright, 0 0 80px @bright, 0 0 100px @bright, 0 0 150px @bright;
+  }
+  to {
+    text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px @bright, 0 0 35px @bright, 0 0 40px @bright, 0 0 50px @bright, 0 0 75px @bright;
+  }
+}
+
+@keyframes neon2 {
+  from {
+    text-shadow: 0 0 20px #fff, 0 0 40px #fff, 0 0 60px #fff, 0 0 80px @bright, 0 0 140px @bright, 0 0 160px @bright, 0 0 200px @bright, 0 0 300px @bright;
+  }
+  to {
+    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px @bright, 0 0 70px @bright, 0 0 80px @bright, 0 0 100px @bright, 0 0 150px @bright;
+  }
+}
+@-webkit-keyframes neon2 {
+  from {
+    text-shadow: 0 0 20px #fff, 0 0 40px #fff, 0 0 60px #fff, 0 0 80px @bright, 0 0 140px @bright, 0 0 160px @bright, 0 0 200px @bright, 0 0 300px @bright;
+  }
+  to {
+    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px @bright, 0 0 70px @bright, 0 0 80px @bright, 0 0 100px @bright, 0 0 150px @bright;
+  }
+}
+@-moz-keyframes neon2 {
+  from {
+    text-shadow: 0 0 20px #fff, 0 0 40px #fff, 0 0 60px #fff, 0 0 80px @bright, 0 0 140px @bright, 0 0 160px @bright, 0 0 200px @bright, 0 0 300px @bright;
+  }
+  to {
+    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px @bright, 0 0 70px @bright, 0 0 80px @bright, 0 0 100px @bright, 0 0 150px @bright;
+  }
 }
 
 /* Home Lead Sections */
